--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyFinalProyect">
-        <activity android:name=".MenuActivity"></activity>
+        <activity android:name=".DuenoDeCargaMainActivity"></activity>
+        <activity android:name=".PropietarioCamionActivity" />
+        <activity android:name=".MenuActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
