--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyFinalProyect">
-        <activity android:name=".reportarUbicacionActivity"></activity>
+        <activity android:name=".CiudadDestinoMainActivity"></activity>
+        <activity android:name=".CiudadOrigenMainActivity" />
+        <activity android:name=".CargaPeligrosaMainActivity" />
+        <activity android:name=".CargaFragilMainActivity" />
+        <activity android:name=".CargaPerecederaMainActivity" />
+        <activity android:name=".CargaGranelMainActivity" />
+        <activity android:name=".CargaGeneralMainActivity" />
+        <activity android:name=".TipoDeCargaActivity" />
+        <activity android:name=".reportarUbicacionActivity" />
         <activity android:name=".DuenoDeCargaMainActivity" />
         <activity android:name=".PropietarioCamionActivity" />
         <activity android:name=".MenuActivity" />
