--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="co.edu.myfinalproyect">
 
     <application
@@ -9,18 +10,76 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyFinalProyect">
-        <activity android:name=".CiudadDestinoMainActivity"></activity>
-        <activity android:name=".CiudadOrigenMainActivity" />
-        <activity android:name=".CargaPeligrosaMainActivity" />
-        <activity android:name=".CargaFragilMainActivity" />
-        <activity android:name=".CargaPerecederaMainActivity" />
-        <activity android:name=".CargaGranelMainActivity" />
-        <activity android:name=".CargaGeneralMainActivity" />
-        <activity android:name=".TipoDeCargaActivity" />
+        <activity android:name=".AjustesActivity"></activity>
+        <activity android:name=".CiudadDestinoMainActivity"/>
+        <activity android:name=".CiudadOrigenMainActivity"/>
+        <activity android:name=".CargaPeligrosaMainActivity"
+
+            android:parentActivityName=".TipoDeCargaActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".TipoDeCargaActivity"/>
+        </activity>
+        <activity android:name=".CargaFragilMainActivity"
+
+            android:parentActivityName=".TipoDeCargaActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".TipoDeCargaActivity"/>
+        </activity>
+        <activity android:name=".CargaPerecederaMainActivity"
+
+            android:parentActivityName=".TipoDeCargaActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".TipoDeCargaActivity"/>
+        </activity>
+        <activity android:name=".CargaGranelMainActivity"
+
+            android:parentActivityName=".TipoDeCargaActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".TipoDeCargaActivity"/>
+        </activity>
+        <activity android:name=".CargaGeneralMainActivity"
+
+            android:parentActivityName=".TipoDeCargaActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".TipoDeCargaActivity"/>
+        </activity>
+        <activity android:name=".TipoDeCargaActivity"
+
+            android:parentActivityName=".DuenoDeCargaMainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".DuenoDeCargaMainActivity"/>
+        </activity>
         <activity android:name=".reportarUbicacionActivity" />
-        <activity android:name=".DuenoDeCargaMainActivity" />
-        <activity android:name=".PropietarioCamionActivity" />
-        <activity android:name=".MenuActivity" />
+        <activity android:name=".DuenoDeCargaMainActivity"
+
+            android:parentActivityName=".LoginActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".LoginActivity"/>
+        </activity>
+
+        <activity android:name=".PropietarioCamionActivity"
+
+            android:parentActivityName=".LoginActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".LoginActivity"/>
+
+        </activity>
+        <activity android:name=".MenuActivity"
+
+            android:parentActivityName=".LoginActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".LoginActivity"/>
+
+        </activity>
         <activity android:name=".LoginActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
