--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyFinalProyect">
-        <activity android:name=".EmailActivity"></activity>
+        <activity android:name=".NUEVOEMAIL"></activity>
+        <activity android:name=".EmailActivity" />
         <activity android:name=".MapsActivity" />
         <activity
             android:name=".AjustesActivity"
