--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyFinalProyect">
-        <activity android:name=".UbicacionActivity"></activity>
+        <activity android:name=".DatoSolicitudCarga"></activity>
+        <activity android:name=".UbicacionActivity" />
         <activity android:name=".NUEVOEMAIL" />
         <activity android:name=".EmailActivity" />
         <activity android:name=".MapsActivity" />
